power up indicator, health bar & jump loading bar visual changes / improved bg loading / stop game when finished

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,7 +16,8 @@ body {
     align-items: center;
     
     #world {
-        background-color: rgba(255, 255, 255, 0.6);
+        border: 0.4rem solid rgb(0, 0, 0);
+        border-radius: 1rem;
         max-width: 100vw;
         max-height: 100vh;
         aspect-ratio: 16/9;
@@ -67,7 +68,7 @@ body {
         button {
             width: 10rem;
             height: 5rem;
-            border: 2px solid black;
+            border: none;
             border-radius: 1rem;
             cursor: pointer;
             transition: opacity ease-out 0.15s;
